--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -7,6 +7,10 @@ on:
     branches:
       - main
 
+inputs:
+  docker_opt_rw: -v /cvmfs:/cvmfs:shared -v ${{ github.workspace }}:/work/CombinedLimit  --mount source=cmsusr,destination=/home/cmsusr -w /home/cmsusr -e CMSSW_VERSION=${{ matrix.CMSSW_VERSION }} -e SCRAM_ARCH=${{ matrix.SCRAM_ARCH }}
+  docker_opt_ro: -v /cvmfs:/cvmfs:shared -v cmsusr:/home/cmsusr/cmssw/:ro -w /home/cmsusr/ -e CMSSW_VERSION=${{ matrix.CMSSW_VERSION }} -e SCRAM_ARCH=${{ matrix.SCRAM_ARCH }}
+
 jobs:
   test_workflow:
     runs-on: ubuntu-latest
@@ -33,16 +37,11 @@ jobs:
         with:
           image: ${{ matrix.IMAGE }}
           shell: bash
-          options: -v /cvmfs:/cvmfs:shared -v ${{ github.workspace }}:/work/CombinedLimit  --mount source=cmsusr,destination=/home/cmsusr -w /home/cmsusr -e CMSSW_VERSION=${{ matrix.CMSSW_VERSION }} -e SCRAM_ARCH=${{ matrix.SCRAM_ARCH }}
+          options: ${{inputs.docker_opt_rw}}
           run: | 
-            pwd 
             cd /home/cmsusr/
-            ls .
-            pwd
-            ls /work/CombinedLimit
             source /cvmfs/cms.cern.ch/cmsset_default.sh
             scram project ${CMSSW_VERSION}
-            source /cvmfs/cms.cern.ch/cmsset_default.sh
             cd ${CMSSW_VERSION}/src
             cmsenv
             mkdir -p HiggsAnalysis
@@ -51,39 +50,106 @@ jobs:
             echo ${PATH}
             root --version
             combine --help
-            pwd
+
       - uses: rhaschke/docker-run-action@v5
-        name: tests on Combine paper inputs
+        name: Counting datacard
         with:
           image: ${{ matrix.IMAGE }}
           shell: bash
-          options: -v /cvmfs:/cvmfs:shared -v cmsusr:/home/cmsusr/cmssw/:ro -w /home/cmsusr/ -e CMSSW_VERSION=${{ matrix.CMSSW_VERSION }} -e SCRAM_ARCH=${{ matrix.SCRAM_ARCH }}
+          options: ${{inputs.docker_opt_ro}}
           run: |
-            cp -r cmssw/${CMSSW_VERSION} . 
+            cp -r cmssw/${CMSSW_VERSION} .
             cd /home/cmsusr/${CMSSW_VERSION}/src
-            source /cvmfs/cms.cern.ch/cmsset_default.sh           
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
             cmsenv
-            combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-2-template-analysis.txt -M HybridNew --LHCmode LHC-limits --rMax 2.0 --clsAcc 0.01
-            combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-3-parametric-analysis.txt -M HybridNew --LHCmode LHC-significance -T 100 --mass 125
-            combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-3-parametric-analysis.txt -M Significance --mass 125
-            combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-1-counting-experiment.txt -M MarkovChainMC --tries 100
-            text2workspace.py HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-5-multi-signal.txt -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH -o datacard-5-multi-signal.root --mass 125
-            combine datacard-5-multi-signal.root -M MultiDimFit --algo singles --mass 125
-            combine HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-5-multi-signal.txt -M ChannelCompatibilityCheck --mass 125
             text2workspace.py  HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.txt -m 125 -P HiggsAnalysis.CombinedLimit.PhysicsModel:floatingXSHiggs --PO modes=ggH,qqH
             combine -M MultiDimFit HiggsAnalysis/CombinedLimit/data/tutorials/multiDim/toy-hgg-125.root
 
-
       - uses: rhaschke/docker-run-action@v5
-        name: CMSHistSum
+        name: Parametric analysis
         with:
           image: ${{ matrix.IMAGE }}
           shell: bash
-          options: -v /cvmfs:/cvmfs:shared -v cmsusr:/home/cmsusr/cmssw/:ro -w /home/cmsusr/ -e CMSSW_VERSION=${{ matrix.CMSSW_VERSION }} -e SCRAM_ARCH=${{ matrix.SCRAM_ARCH }}
+          options: ${{inputs.docker_opt_ro}}
+          run: |
+            cp -r cmssw/${CMSSW_VERSION} .
+            cd /home/cmsusr/${CMSSW_VERSION}/src
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
+            cmsenv
+            text2workspace.py HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-3-parametric-analysis.txt -o ws_parametric-analysis.root --mass 125
+            combine -M MultiDimFit ws_parametric-analysis.root  --algo singles
+
+
+      - uses: rhaschke/docker-run-action@v5
+        name: Template analysis 
+        with:
+          image: ${{ matrix.IMAGE }}
+          shell: bash
+          options: ${{inputs.docker_opt_ro}}
           run: |
             cp -r cmssw/${CMSSW_VERSION} . 
             cd /home/cmsusr/${CMSSW_VERSION}/src
             source /cvmfs/cms.cern.ch/cmsset_default.sh
             cmsenv
-            text2workspace.py HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-5-multi-signal.txt --for-fits --no-wrappers --use-histsum  -o datacard-5-multi-signal.root --mass 125 
-            combine -M MultiDimFit datacard-5-multi-signal.root --algo singles 
+            text2workspace.py HiggsAnalysis/CombinedLimit/data/tutorials/CAT23001/datacard-2-template-analysis.txt -o ws_template-analysis.root --mass 125 
+            combine -M MultiDimFit ws_template-analysis.root --algo singles 
+            combine -M FitDiagnostics ws_template-analysis.root  --plots
+
+      - uses: rhaschke/docker-run-action@v5
+        name: Template analysis CMSHistSum
+        with:
+          image: ${{ matrix.IMAGE }}
+          shell: bash
+          options: ${{inputs.docker_opt_ro}}
+          run: |
+            cp -r cmssw/${CMSSW_VERSION} .
+            cd /home/cmsusr/${CMSSW_VERSION}/src
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
+            cmsenv
+            ulimit -s unlimited
+            python3 HiggsAnalysis/CombinedLimit/test/test_interference.py
+
+      - uses: rhaschke/docker-run-action@v5
+        name: RooMultiPdf
+        with:
+          image: ${{ matrix.IMAGE }}
+          shell: bash
+          options: ${{inputs.docker_opt_ro}}
+          run: |
+            cp -r cmssw/${CMSSW_VERSION} .
+            cd /home/cmsusr/${CMSSW_VERSION}/src
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
+            cmsenv
+            ulimit -s unlimited
+            text2workspace.py HiggsAnalysis/CombinedLimit/data/ci/datacard_RooMultiPdf.txt.gz  -o ws_RooMultiPdf.root
+            combine -M MultiDimFit -m 125.38  --setParameters pdf_index_ggh=2 --freezeParameters MH --cminDefaultMinimizerStrategy 0 --X-rtd FAST_VERTICAL_MORPH --X-rtd MINIMIZER_freezeDisassociatedParams --X-rtd MINIMIZER_multiMin_maskChannels=2 --algo singles ws_RooMultiPdf.root
+
+      - uses: rhaschke/docker-run-action@v5
+        name: RooParametricHist
+        with:
+          image: ${{ matrix.IMAGE }}
+          shell: bash
+          options: ${{inputs.docker_opt_ro}}
+          run: |
+            cp -r cmssw/${CMSSW_VERSION} .
+            cd /home/cmsusr/${CMSSW_VERSION}/src
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
+            cmsenv
+            ulimit -s unlimited
+            text2workspace.py -P HiggsAnalysis.CombinedLimit.PhysicsModel:multiSignalModel  --PO verbose --PO 'map=.*/*hcc*:r[1,-500,500]' --PO 'map=.*/zcc:z[1,-5,5]' HiggsAnalysis/CombinedLimit/data/ci/datacard_RooParametricHist.txt -o ws_RooParametricHist.root
+            combine -M MultiDimFit ws_RooParametricHist.root --algo singles
+
+      - uses: rhaschke/docker-run-action@v5
+        name: RooHistPdf
+        with:
+          image: ${{ matrix.IMAGE }}
+          shell: bash
+          options: ${{inputs.docker_opt_ro}}
+          run: |
+            cp -r cmssw/${CMSSW_VERSION} .
+            cd /home/cmsusr/${CMSSW_VERSION}/src
+            source /cvmfs/cms.cern.ch/cmsset_default.sh
+            cmsenv
+            ulimit -s unlimited
+            text2workspace.py HiggsAnalysis/CombinedLimit/data/ci/datacard_RooHistPdf.txt.gz -o ws_RooHistPdf.root
+            combine -M MultiDimFit ws_RooHistPdf.root --algo singles -v -2
