--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           cvmfs_repositories: 'cms.cern.ch'
       - uses: rhaschke/docker-run-action@v5
+        name: Build Combine
         with:
           image: ${{ matrix.IMAGE }}
           shell: bash
