run root version dependent workspaces only on recent versions

--- a/.github/workflows/cvmfs-ci.yml
+++ b/.github/workflows/cvmfs-ci.yml
@@ -112,6 +112,7 @@ jobs:
           image: ${{ matrix.IMAGE }}
           shell: bash
           options: ${{env.docker_opt_ro}}
+          if: startsWith(matrix.CMSSW_VERSION, 'CMSSW_14')
           run: |
             cp -r cmssw/${CMSSW_VERSION} .
             cd /home/cmsusr/${CMSSW_VERSION}/src
@@ -127,6 +128,7 @@ jobs:
           image: ${{ matrix.IMAGE }}
           shell: bash
           options: ${{env.docker_opt_ro}}
+          if: startsWith(matrix.CMSSW_VERSION, 'CMSSW_14')
           run: |
             cp -r cmssw/${CMSSW_VERSION} .
             cd /home/cmsusr/${CMSSW_VERSION}/src
@@ -142,6 +144,7 @@ jobs:
           image: ${{ matrix.IMAGE }}
           shell: bash
           options: ${{env.docker_opt_ro}}
+          if: startsWith(matrix.CMSSW_VERSION, 'CMSSW_14')
           run: |
             cp -r cmssw/${CMSSW_VERSION} .
             cd /home/cmsusr/${CMSSW_VERSION}/src
