--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,9 @@ jobs:
           - python: "3.10"
             root: "6.26.4"
           # python 3.10 root 6.32 (not available yet)
-          #- python: "3.10"
-          #  root: "6.32" # version 6.30.07 where the conflicting classes were removed from root is not available, so compiling with 6.32.00 where this issue is resolved
-
+          - python: "3.12"
+            root: "6.32.10" 
+            
     runs-on: ubuntu-latest
     name: Compile (py${{ matrix.python }}, root${{ matrix.root }})
 
